--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -65,6 +65,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  cursor: pointer;
+}
+
+.App-feature > div:hover {
+  color: #ffa51f
 }
 
 .feature-icon {
