--- a/src/layouts/Layout.css
+++ b/src/layouts/Layout.css
@@ -58,7 +58,7 @@
   top: 132px;
   bottom: 0;
   display: flex;
-  background-color: #203152;
+  background-color: #3A405A;
 }
 
 .dropdown:hover .dropdown-menu {
