--- a/src/routes/Intro/Intro.css
+++ b/src/routes/Intro/Intro.css
@@ -90,3 +90,8 @@ header.masthead {
   background-attachment: scroll;
   background-size: cover;
 }
+
+.media {
+  padding-top: 73px;
+  margin: 3em 10em
+}
