--- a/src/routes/Intro/Intro.css
+++ b/src/routes/Intro/Intro.css
@@ -172,3 +172,15 @@ header.masthead {
   margin: 2.5em;
   font-size: 20px;
 }
+
+.ant-carousel .slick-slide {
+  text-align: center;
+  height: 560px;
+  line-height: 160px;
+  background: #364d79;
+  overflow: hidden;
+}
+
+.ant-carousel .slick-slide h3 {
+  color: #fff;
+}
